--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <title>Landing Page</title>
 </head>
 <body>
-<a href="https://www.pinterest.com/pin/590816044866888958/">LINK</a>
+<!-- <a href="https://www.pinterest.com/pin/590816044866888958/">LINK</a> -->
 <div class="container navhead">
     <div class="header d-flex align-items-center justify-content-between">
         <div class="logo">
             <a href="index.html"><img src="images/logo.png" class='img-fluid' alt=""></a>
         </div>
         <div class="navigation mt-1">
-            <ul class="list-unstyled d-flex">
+            <ul class="list-unstyled d-flex w-100">
                 <li>English <i class="fas fa-chevron-down languagearrow"></i>
                     <ul class='list-unstyled position-absolute'>
-                        <li>France</li>
+                        <li class='py-1 ps-2'>France</li>
                     </ul>
                 </li>
                 <li><a href="#">Projects</a></li>
@@ -35,16 +35,38 @@
 <section class="topMain w-75 mx-auto position-relative">
 <div class="container">
     <span class="spans">
-        <span class='position-absolute bg-warning'></span>
-        <span class='position-absolute bg-secondary'></span>
-        <span class='position-absolute bg-info'></span>
-        <span class='position-absolute bg-danger'></span>
+        <span class='position-absolute'>
+            <svg width="100" height="100">
+                <circle r="20" stroke-width="4" fill="#0cd7aa" />
+                Sorry, your browser does not support inline SVG.
+             </svg> 
+        </span>
+        <span class='position-absolute'>
+            <svg width="100" height="100">
+                <circle cy="20" r="20" stroke-width="4" fill="#0cd7aa" />
+                Sorry, your browser does not support inline SVG.
+             </svg> 
+        </span>
+        <span class='position-absolute'>
+            <span class='position-absolute'>
+                <svg width="100" height="100">
+                    <circle cx="20" r="20" stroke-width="4" fill="#dc3545" />
+                    Sorry, your browser does not support inline SVG.
+                 </svg> 
+            </span>
+        </span>
+        <span class='position-absolute'>
+            <svg width="100" height="100">
+                <circle r="20" stroke-width="4" fill="#51bef5" />
+                Sorry, your browser does not support inline SVG.
+             </svg> 
+        </span>
     </span>
     <h1 class='w-50 fw-bold'>Sav<span class='text-info'>e</span> for what y<span class='text-danger'>o</span>u want, w<span class='text-warning'>i</span>th who y<span class='text-success'>o</span>u w<span class='text-primary'>a</span>nt!</h1>
     <p class='text-muted LOREM pt-1'>Lorem ipsum dolor, sit amet consectetur olestiae, aliquam tae perferendis. Sapiente, reprehenderit itaque?</p>
 
     <div class="startsaving mt-5">
-        <button class="btn text-light px-4 mt-5">
+        <button class="btn text-light px-5 py-2 mt-5">
             <p class='p-0 m-0'>Start saving</p>
         </button>
     </div>
@@ -74,9 +96,144 @@
                 <h6 class='my-0 py-0 '>Personal</h6>
             </div>
         </div>
+        <div class="snboard w-100 py-3 px-4 mt-3 bg-white">
+            <div class="d-flex align-items-center justify-content-between">
+                <h6 class='fw-bold my-0 py-0'>Snowboarding Gear</h6>
+                <i class="fas fa-ellipsis-v"></i>
+            </div>
+            <div class="progress mt-3 rounded-pill">
+                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="d-flex align-items-center justify-content-between pt-3 text-muted">
+                <p class='p-0 m-0'>75% saved</p>
+                <p class='p-0 m-0'>3900 / 5200$</p>
+            </div>
+        </div>
+        <div class="alpine w-100 py-3 px-4 my-3 bg-white">
+            <div class="d-flex align-items-center justify-content-between">
+                <h6 class='fw-bold my-0 py-0'>Alpine</h6>
+                <i class="fas fa-ellipsis-v"></i>
+            </div>
+            <div class="progress mt-3 rounded-pill">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            <div class="d-flex align-items-center justify-content-between pt-3 text-muted">
+                <p class='p-0 m-0'>90% saved</p>
+                <p class='p-0 m-0'>3900 / 5200$</p>
+            </div>
+        </div>
     </div>
 </div>
 </section>
+
+<section class="main">
+    <div style="padding-left: 20%; padding-top: 10%;">
+        <svg width="100" height="100">
+            <circle cx="100" r="50" stroke-width="4" fill="#b07fd6bd" />
+            Sorry, your browser does not support inline SVG.
+         </svg> 
+    </div>
+    <div class='position-absolute' style="top:50%; right:0; transform: rotate(180deg)">
+        <svg width="100" height="100">
+            <circle cy="50" r="40" stroke-width="4" fill="#b07fd6bd" />
+            Sorry, your browser does not support inline SVG.
+         </svg> 
+    </div>
+    <div class="mainTxt w-75">
+        <h1>Smart <i class="fas fa-brain"></i></h1>
+        <h1 class='fw-bold'>Saving Habits</h1>
+        <p class="mx-0 my-2 p-0 text-muted w-50">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, blanditiis! Et numquam voluptatum natus repudiandae
+        </p>
+        <p class='p-0 mx-0 my-4 text-muted w-50'>voluptatibus magnam incidunt nam tempore omnis saepe quod, odio at doloribus hic cumque. Quasi, aut.
+    </div>
+    <div style="padding-left: 20%; padding-top: 22%;">
+        <svg width="50" height="50">
+            <circle cx="25" cy="25" r="20" stroke-width="4" fill="#dc3545" />
+            Sorry, your browser does not support inline SVG.
+         </svg> 
+    </div>
+</section>
+
+<section class="offer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>What we offer ... <i class="far fa-lightbulb"></i></h2>
+                <div class="content mt-5 w-75">
+                    <div class="d-flex align-items-center active">
+                        <div style="background: #a98ac4; border-radius: 15px;">
+                            <i class="far fa-thumbs-up"></i>
+                        </div>
+                        <div class="contentTxt ms-3">
+                            <p class="title my-0 py-0 fw-bold">Title One</p>
+                            <p class="my-0 py-0 text-muted">lorem ipsum lorem ipsum lorem</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center my-5">
+                        <div style="background: #661aa0; border-radius: 15px;">
+                            <i class="far fa-thumbs-up"></i>
+                        </div>
+                        <div class="contentTxt ms-3">
+                            <p class="title my-0 py-0 fw-bold">Title Two</p>
+                            <p class="my-0 py-0 text-muted">lorem ipsum lorem ipsum lorem lorem ipsum lorem ipsum lorem</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <div style="background: #c06280; border-radius: 15px;">
+                            <i class="far fa-thumbs-up"></i>
+                        </div>
+                        <div class="contentTxt ms-3">
+                            <p class="title my-0 py-0 fw-bold">Title Three</p>
+                            <p class="my-0 py-0 text-muted">lorem ipsum lorem ipsum lorem</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 d-flex align-items-center justify-content-center position-relative">
+                <div class='position-absolute' style="top: 0; left: 30%;">
+                    <svg width="20" height="20">
+                        <circle cx="20" cy="20" r="10" stroke-width="4" fill="crimson" />
+                        Sorry, your browser does not support inline SVG.
+                    </svg> 
+                </div>
+            <div class='position-absolute' style="bottom: 10%; right: 10%;">
+                <svg width="20" height="20">
+                    <circle cx="10" cy="10" r="10" stroke-width="4" fill="rgb(81, 190, 245)" />
+                    Sorry, your browser does not support inline SVG.
+                </svg> 
+            </div>
+            <div class='position-absolute' style="bottom: 0; right: 50%;">
+                <svg width="40" height="40">
+                    <circle cx="15" cy="15" r="10" stroke-width="4" fill="orangered" />
+                    Sorry, your browser does not support inline SVG.
+                </svg> 
+            </div>
+                <div class="imgs">
+                    <div class="img active">
+                        <img src="images/three.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="images/two.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="images/one.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container d-flex align-items-center">
+        <div class="logoimg">
+            <img src="images/logo.png">
+        </div>
+        <p class='p-0 m-0 text-center w-100 text-muted'>FOOTER</p>
+    </div>
+</footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
