--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </div>
                     <div class="d-flex align-items-center my-5">
                         <div style="background: #661aa0; border-radius: 15px;">
-                            <i class="far fa-thumbs-up"></i>
+                            <i class="far fa-calendar-minus"></i>
                         </div>
                         <div class="contentTxt ms-3">
                             <p class="title my-0 py-0 fw-bold">Title Two</p>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div style="background: #c06280; border-radius: 15px;">
-                            <i class="far fa-thumbs-up"></i>
+                            <i class="fas fa-unlock-alt"></i>
                         </div>
                         <div class="contentTxt ms-3">
                             <p class="title my-0 py-0 fw-bold">Title Three</p>
@@ -232,6 +232,9 @@
             <img src="images/logo.png">
         </div>
         <p class='p-0 m-0 text-center w-100 text-muted'>FOOTER</p>
+        <div class="gotop text-white rounded-circle">
+            <i class="fas fa-level-up-alt"></i>
+        </div>
     </div>
 </footer>
 
