--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <li class='py-1 ps-2'>France</li>
                     </ul>
                 </li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#" class='portfolio text-white'>Portfolio</a></li>
+                <li><a href="https://bacho093.github.io/Portfolio/projects.html">Projects</a></li>
+                <li><a href="https://bacho093.github.io/Portfolio/" class='portfolio text-white'>Portfolio</a></li>
             </ul>
         </div>
     </div>
